[metadata]
name = nbtojekyll
version = 0.0.1
author = Raphael Heitjohann
description = Converts Jupyter Java Notebooks to Markdown renderable in Jekyll and with Mathjax support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rheitjoh/nbtojekyll
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = nbtojekyll
packages = find:

[options.packages.find]
where = nbtojekyll